<resources>
    <string name="app_name">CondoMaster</string>
    <string name="title_activity_princiapl">PrinciaplActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">CondoMaster</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Login</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <!-- BS:Menu Principal >> -->
    <string name="configra_o_sensores">Configuração Sensores</string>
    <string name="gr_ficos">Gráficos</string>
    <string name="switch_sensores">Switch Sensores</string>
    <string name="sensores">Sensores</string>
    <string name="informa_o_atual">Informação Atual</string>
    <string name="condom_nio">Condomínio</string>
    <string name="chat">Chat</string>
    <string name="calend_rio">Calendário</string>
    <string name="ficheiros">Ficheiros</string>
    <string name="regras">Regras</string>
    <string name="administrador">Administrador</string>
    <string name="marca_o_de_assembleia">Marcação de Assembleia</string>
    <string name="comunicados">Comunicados</string>
    <string name="pedidos_de_manuten_o">Pedidos de Manutenção</string>
    <string name="pedidos_de_reservas">Pedidos de Reservas</string>
    <string name="reservas">Reservas</string>
    <!-- BS:Menu Principal << -->


    <string name="descricao_servico">Serviço de teste.</string>
    <string name="title_activity_pedido_manutencao">PedidoManutencao</string>
    <string name="title_activity_charts">Gráficos</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="Temperature">Temperatura</string>
    <string name="Humidity">Humidade</string>
    <string name="Gas">Gás</string>
    <string name="Luminosity">Luminosidade</string>
    <string name="details">Detalhes</string>
    <string name="title_activity_chart_humidity">Humidade</string>
    <string name="title_activity_chart_Temperature">Temperatura</string>
    <string name="title_activity_chart_gas">ChartGas</string>
    <string name="title_activity_chart_luminosity">ChartLuminosity</string>
    <string name="logout">Sair</string>

    <string name="med">Valor médio:</string>
    <string name="max">Valor máximo:</string>
    <string name="actual">Valor atual:</string>
    <string name="min">Valor mínimo:</string>
    <string name="data_start">Início</string>
    <string name="data_end">Final</string>
    <string name="update">Atualizar</string>
    <string name="title_activity_info_actual">InfoActual</string>
    <string name="installed_sensors">Sensores instalados:</string>
    <string name="number_active_sensors">sensores ativos:</string>
    <string name="local">Lugar</string>
    <string name="Temp">Temp</string>
    <string name="Humi">Humi</string>
    <string name="Lumi">Lumi</string>
    <string name="legenda">Legenda:</string>
    <string name="active">Ativo: V</string>
    <string name="Instalado">Instalado: O</string>
    <string name="naoinstalado">Não instalado: X</string>
</resources>
