<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Sensors.DetailsTemperature">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textViewMinima"
            android:layout_width="220sp"
            android:layout_height="45sp"
            android:layout_marginTop="20dp"
            android:paddingStart="20sp"
            android:paddingLeft="20sp"
            android:paddingTop="5sp"
            android:paddingEnd="5sp"
            android:text="@string/min"
            android:textAlignment="textEnd"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/textViewMaxima"
            app:layout_constraintStart_toStartOf="@+id/textViewMaxima"
            app:layout_constraintTop_toBottomOf="@+id/textViewMaxima" />

        <TextView
            android:id="@+id/textViewMedia"
            android:layout_width="220sp"
            android:layout_height="45sp"
            android:layout_marginTop="20dp"
            android:paddingStart="20sp"
            android:paddingLeft="20sp"
            android:paddingTop="5sp"
            android:paddingEnd="5sp"
            android:text="@string/med"
            android:textAlignment="textEnd"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/textViewMinima"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textViewMinima"
            app:layout_constraintTop_toBottomOf="@+id/textViewMinima" />

        <TextView
            android:id="@+id/textViewMaxima"
            android:layout_width="220dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:paddingStart="20sp"
            android:paddingLeft="20sp"
            android:paddingTop="5sp"
            android:paddingEnd="5sp"
            android:text="@string/max"
            android:textAlignment="textEnd"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/textViewAtual"
            app:layout_constraintStart_toStartOf="@+id/textViewAtual"
            app:layout_constraintTop_toBottomOf="@+id/textViewAtual" />

        <TextView
            android:id="@+id/textViewAtual"
            android:layout_width="220dp"
            android:layout_height="48dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:paddingStart="20sp"
            android:paddingLeft="20sp"
            android:paddingTop="5sp"
            android:paddingEnd="5sp"
            android:text="@string/actual"
            android:textAlignment="textEnd"
            android:textColor="@android:color/background_dark"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText" />

        <TextView
            android:id="@+id/textViewValueMaxima"
            android:layout_width="85dp"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:paddingStart="5sp"
            android:paddingLeft="20sp"
            android:paddingTop="10sp"
            android:paddingEnd="20sp"
            android:text="0"
            android:textAlignment="textStart"
            android:textColor="#3F51B5"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.058"
            app:layout_constraintStart_toEndOf="@+id/textViewMaxima"
            app:layout_constraintTop_toBottomOf="@+id/textViewValueAtual" />

        <TextView
            android:id="@+id/textViewValueMinima"
            android:layout_width="85dp"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:paddingStart="5sp"
            android:paddingLeft="20sp"
            android:paddingTop="10sp"
            android:paddingEnd="20sp"
            android:text="0"
            android:textAlignment="textStart"
            android:textColor="#3F51B5"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.058"
            app:layout_constraintStart_toEndOf="@+id/textViewMinima"
            app:layout_constraintTop_toBottomOf="@+id/textViewValueMaxima" />

        <TextView
            android:id="@+id/textViewValueMedia"
            android:layout_width="85dp"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:paddingStart="5sp"
            android:paddingLeft="20sp"
            android:paddingTop="10sp"
            android:paddingEnd="20sp"
            android:text="0"
            android:textAlignment="textStart"
            android:textColor="#3F51B5"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.058"
            app:layout_constraintStart_toEndOf="@+id/textViewMedia"
            app:layout_constraintTop_toBottomOf="@+id/textViewValueMinima" />

        <TextView
            android:id="@+id/textViewValueAtual"
            android:layout_width="85dp"
            android:layout_height="45dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:paddingStart="5sp"
            android:paddingLeft="20sp"
            android:paddingTop="10sp"
            android:paddingEnd="20sp"
            android:text="0"
            android:textAlignment="textStart"
            android:textColor="#3F51B5"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.058"
            app:layout_constraintStart_toEndOf="@+id/textViewAtual"
            app:layout_constraintTop_toBottomOf="@+id/editText" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:enabled="false"
            android:inputType="textPersonName"
            android:scrollbarThumbVertical="@mipmap/ic_info"
            android:text="@string/details"
            android:textAlignment="center"
            android:textColor="#009688"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.022"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextFinalDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:inputType="date"
            android:paddingStart="20sp"
            android:paddingEnd="20sp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.56"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewFinalDate" />

        <EditText
            android:id="@+id/editTextStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:inputType="date"
            android:paddingStart="20sp"
            android:paddingLeft="20sp"
            android:paddingEnd="20sp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.56"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewStartDate" />

        <TextView
            android:id="@+id/textViewFinalDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:paddingStart="20sp"
            android:paddingEnd="20sp"
            android:text="@string/data_end"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.544"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextStartDate" />

        <TextView
            android:id="@+id/textViewStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:paddingStart="20sp"
            android:paddingEnd="20sp"
            android:text="@string/data_start"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.544"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewMedia" />

        <Button
            android:id="@+id/buttonUpdate"
            android:layout_width="152dp"
            android:layout_height="51dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="8dp"
            android:background="@android:color/holo_blue_dark"
            android:onClick="getRecords"
            android:text="@string/update"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.555"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextFinalDate" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>